@@ -67,12 +67,12 @@ The parentheses isolate the logical term from any default command filter or
 implicit report filter which would be combined with an implicit 'and'.
 
 A filter may target specific tasks using ID or UUID numbers.  To specify
-multiple tasks use one of these forms (comma or space-separated list of ID
-numbers, UUID numbers or ID ranges):
+multiple tasks use one of these forms (space-separated list of ID numbers,
+UUID numbers or ID ranges):
 
-  task 1,2,3                                    delete
+  task 1 2 3                                    delete
   task 1-3                                      info
-  task 1,2-5,19                                 modify pri:H
+  task 1 2-5 19                                 modify pri:H
   task 4-7 ebeeab00-ccf8-464b-8b58-f7f2d606edfb info
 
 .SH MODIFICATIONS
@@ -216,8 +216,8 @@ an alias to 'history.monthly'.
 .TP
 .B task <filter> ids
 Applies the filter then extracts only the task IDs and presents them as
-a range, for example: 1-4,12.  This is useful as input to a task command,
-to achieve this:
+a space-separated list.  This is useful as input to a task command, to achieve
+this:
 
   task $(task project:Home ids) modify priority:H
 
